--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </body>
 
 
-<index.css>
+<style>
 * {
     margin: 0;
     padding: 0;
@@ -170,5 +170,5 @@ footer {
 footer p {
     font-size: 1rem;
 }
-</index.css>
+</style>
 </html>
