--- a/VIBRA contacts.html
+++ b/VIBRA contacts.html
@@ -41,7 +41,7 @@
     
                     
                     <div class="contact-image">
-                        <img src="https://github.com/jeptoo40/VEBRA-TECH/blob/main/assets/phonecall.png?raw=true" alt="phonecall">
+                        <img src="https://github.com/jeptoo40/VEBRA-TECH/raw/master/phonecall.jpg" alt="Phone Call">
 
                     </div>
 
