--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\logo vebra.png" alt="logo vebra.png">
+                <img src="https://github.com/jeptoo40/VEBRA-TECH/raw/master/logo%20vebra.png" alt="VEBRA Tech Logo">
+
             </div>
             <ul class="nav-links">
                <li><a href="index.html">Home</a></li>
