--- a/VIBRA contacts.html
+++ b/VIBRA contacts.html
@@ -14,7 +14,8 @@
         <header>
             <nav class="navbar">
                 <div class="logo">
-                   <img src="https://github.com/jeptoo40/VEBRA-TECH/blob/main/assets/logo.png?raw=true" alt="Logo">
+                   <img src="https://github.com/jeptoo40/VEBRA-TECH/raw/master/logo%20vebra.png" alt="VEBRA Tech Logo">
+
 
                 </div>
                 <ul class="nav-links">
@@ -384,8 +385,8 @@ footer {
     }
 
     .footer-social-media a {
-        margin-bottom: 10px; 
-    }
-}
-    </style>
+        margin-bottom: 10px;   
+
+</style>
 </html>
+}
