--- a/VIBRA contacts.html
+++ b/VIBRA contacts.html
@@ -73,7 +73,8 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-logo">
-                    <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\logo vebra.png" alt="logo vebra.png">
+                    <img src="https://github.com/jeptoo40/VEBRA-TECH/raw/master/logo%20vebra.png" alt="VEBRA Tech Logo">
+
                 </div>
 
                 <div class="footer-info">
@@ -192,6 +193,7 @@ body {
     border-radius: 8px; 
     margin-top: 20px;
 }
+
 
 
 .social-media {
