Update VIRA about us.html

--- a/VIRA about us.html
+++ b/VIRA about us.html
@@ -40,7 +40,7 @@
             <div class="core-values-grid">
                 <div class="core-value-item">
                     <div class="value-icon">
-                        <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\integrity.jpg" alt="Integrity.jpg">
+                        <img src="integrity.jpg" alt="Integrity.jpg">
                     </div>
                     <h3>Integrity</h3>
                     <p>We act with honesty and transparency in everything we do.</p>
