Update VIRA about us.html

--- a/VIRA about us.html
+++ b/VIRA about us.html
@@ -47,14 +47,14 @@
                 </div>
                 <div class="core-value-item">
                     <div class="value-icon">
-                        <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\innovation.jpg" alt="innovation.jpg">
+                        <img src="innovation.jpg" alt="innovation.jpg">
                     </div>
                     <h3>Innovation</h3>
                     <p>We embrace change and continuously seek new ways to create value.</p>
                 </div>
                 <div class="core-value-item">
                     <div class="value-icon">
-                        <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\customer relation.jpg" alt="customer relation.jpg">
+                        <img src="customer relation.jpg" alt="customer relation.jpg">
                 
                     </div>
                     <h3>Customer Relations</h3>
