Update VIRA about us.html

--- a/VIRA about us.html
+++ b/VIRA about us.html
@@ -70,17 +70,17 @@
             <p>Meet the passionate and experienced team behind VEBRA TECH SOLUTIONS. With diverse backgrounds and deep expertise in IT, our team is dedicated to delivering exceptional solutions to our clients.</p>
             <div class="team-members">
                 <div class="team-member">
-                    <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\victor.jpg" alt="victor.jpg">
+                    <img src="victor.jpg" alt="victor.jpg">
                     <h3>Eng.Victor</h3>
                     <p>Sales Marketer</p>
                 </div>
                 <div class="team-member">
-                    <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\Emmanuel.jpg" alt="Emmanuel.jpg">
+                    <img src="Emmanuel.jpg" alt="Emmanuel.jpg">
                     <h3>Eng.Emmanuel</h3>
                     <p>CTO,Manager</p>
                 </div>
                 <div class="team-member">
-                    <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\Nouria.jpg" alt="Nouria.jpg">
+                    <img src="Nouria.jpg" alt="Nouria.jpg">
                     <h3>Eng.Nouria</h3>
                     <p>Lead Developer</p>
                 </div>
