--- a/VIBRA portfolio.html
+++ b/VIBRA portfolio.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="C:\Users\Administrator\Desktop\VEBRA SOLUTIONS\logo vebra.png" alt="logo vebra.png">
+                <img src="logo vebra.png" alt="logo vebra.png">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
