--- a/VIBRA portfolio.html
+++ b/VIBRA portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="VEBRA TECH SOLUTIONS - Portfolio, Showcasing Successful IT Projects">
     <title>Portfolio - VEBRA TECH SOLUTIONS</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
     
