--- a/VIBRA contacts.html
+++ b/VIBRA contacts.html
@@ -14,7 +14,7 @@
         <header>
             <nav class="navbar">
                 <div class="logo">
-                   <img src="/logo vebra.png" alt="logo vebra.png">
+                   <img src="logo vebra.png" alt="logo vebra.png">
 
 
                 </div>
@@ -42,7 +42,7 @@
     
                     
                     <div class="contact-image">
-                        <img src="phonecall.jpg" alt="Phone Call">
+                        <img src="phonecall.jpg" alt="phonecall.jpg">
 
                     </div>
 
@@ -73,7 +73,7 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-logo">
-                    <img src="https://github.com/jeptoo40/VEBRA-TECH/raw/master/logo%20vebra.png" alt="VEBRA Tech Logo">
+                    <img src="logo vebra.png" alt="logo vebra.png">
 
                 </div>
 
