--- a/VIBRA contacts.html
+++ b/VIBRA contacts.html
@@ -42,7 +42,7 @@
     
                     
                     <div class="contact-image">
-                        <img src="phonecall.jpg" alt="phonecall.jpg">
+                        <img src="phone_icon.png" alt="phone_icon.png">
 
                     </div>
 
